--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,11 @@
 # Changelog
 
+## [0.3.0] - 2020-09-05
+
+### Chnaged
+- rename libKitsunemimiProjectNetwork to libKitsunemimiSakuraNetwork
+
+
 ## [0.2.0] - 2020-08-27
 
 ### Added 
