--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,14 @@
 # Changelog
 
+## [0.7.2] - 2021-10-29
+
+### Added
+- add thread-names
+
+### Chnaged
+- update requirements
+
+
 ## [0.7.1] - 2021-10-04
 
 ### Chnaged
