updates for tagging 0.8.2

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,14 @@
 # Changelog
 
+## [0.8.2] - 2021-12-30
+
+### Removed
+- removed splitting of stream-messages
+
+### Fixed
+- fixed possible dead-lock in error-case while session-init
+
+
 ## [0.8.1] - 2021-11-20
 
 ### Fixed
