--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,11 @@
 # Changelog
 
+## [0.8.4] - 2022-02-13
+
+### Added
+- re-added requests without response, which was removed with v0.8.0
+
+
 ## [0.8.3] - 2022-01-30
 
 ### Changed
